tests/baselines/reference/parserArrowFunctionExpression12(strict=true).errors.txt
fileJs.js(1,1): error TS2304: Cannot find name 'a'.
fileJs.js(1,6): error TS7006: Parameter 'b' implicitly has an 'any' type.
fileJs.js(1,13): error TS2304: Cannot find name 'c'.
fileJs.js(1,17): error TS7006: Parameter 'd' implicitly has an 'any' type.
fileJs.js(1,22): error TS2304: Cannot find name 'e'.
fileTs.ts(1,1): error TS2304: Cannot find name 'a'.
fileTs.ts(1,6): error TS7006: Parameter 'b' implicitly has an 'any' type.
fileTs.ts(1,13): error TS2304: Cannot find name 'c'.
fileTs.ts(1,17): error TS7006: Parameter 'd' implicitly has an 'any' type.
fileTs.ts(1,22): error TS2304: Cannot find name 'e'.


==== fileJs.js (5 errors) ====
    a ? (b) => (c): d => e // Legal JS
    ~
!!! error TS2304: Cannot find name 'a'.
         ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
                ~
!!! error TS2304: Cannot find name 'c'.
                    ~
!!! error TS7006: Parameter 'd' implicitly has an 'any' type.
                         ~
!!! error TS2304: Cannot find name 'e'.
    
==== fileTs.ts (5 errors) ====
    a ? (b) => (c): d => e
    ~
!!! error TS2304: Cannot find name 'a'.
         ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
                ~
!!! error TS2304: Cannot find name 'c'.
                    ~
!!! error TS7006: Parameter 'd' implicitly has an 'any' type.
                         ~
!!! error TS2304: Cannot find name 'e'.
    